Refactor for final keyword